--- a/app/src/main/res/layout/coin_view.xml
+++ b/app/src/main/res/layout/coin_view.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/black">
 
     <TextView
         android:id="@+id/view_text_id"
@@ -10,7 +11,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:text="1"
         app:layout_constraintRight_toLeftOf="@id/view_image_coin"
         app:layout_constraintBottom_toBottomOf="@id/view_image_coin"
@@ -18,8 +19,8 @@
 
     <ImageView
         android:id="@+id/view_image_coin"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         app:layout_constraintLeft_toRightOf="@id/view_text_id"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -27,7 +28,7 @@
         android:id="@+id/view_text_price"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textAlignment="center"
         android:gravity="center"
