--- a/app/src/main/res/layout/coin_view.xml
+++ b/app/src/main/res/layout/coin_view.xml
@@ -14,15 +14,20 @@
         android:textColor="@color/white"
         android:text="1"
         app:layout_constraintRight_toLeftOf="@id/view_image_coin"
-        app:layout_constraintBottom_toBottomOf="@id/view_image_coin"
-        android:textSize="20sp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20sp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="25dp"/>
 
     <ImageView
         android:id="@+id/view_image_coin"
         android:layout_width="40dp"
         android:layout_height="40dp"
         app:layout_constraintLeft_toRightOf="@id/view_text_id"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="25dp"/>
 
     <TextView
         android:id="@+id/view_text_price"
@@ -35,7 +40,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/view_image_coin"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/view_image_coin" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="25dp"/>
 
 
 
