--- a/app/src/main/res/layout/coin_view.xml
+++ b/app/src/main/res/layout/coin_view.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/constraint_layout_coin"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black">
+    android:background="@color/black"
+    android:clickable="true">
 
     <TextView
         android:id="@+id/view_text_id"
@@ -30,7 +32,7 @@
         android:layout_marginVertical="25dp"/>
 
     <TextView
-        android:id="@+id/view_text_price"
+        android:id="@+id/view_text_symbol"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textColor="@color/white"
@@ -39,10 +41,33 @@
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/view_image_coin"
+        app:layout_constraintRight_toLeftOf="@id/view_text_price"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="25dp"/>
+
+    <TextView
+        android:id="@+id/view_text_price"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/view_text_symbol"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="25dp"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@color/gray"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
 
