--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,37 +8,43 @@
     tools:context=".activities.MainActivity"
     android:background="@color/black">
 
-
     <Button
         android:id="@+id/main_button_home"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Home"
+        android:backgroundTint="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/main_button_favorites"
-        />
-
-    <Button
-        android:id="@+id/main_button_favorites"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/main_button_home"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="@id/main_button_popular"/>
 
     <Button
         android:id="@+id/main_button_popular"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/main_button_favorites"
+        android:text="Popular"
+        android:backgroundTint="@color/black"
+        app:layout_constraintLeft_toRightOf="@id/main_button_home"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/main_button_favourites"/>
+
+    <Button
+        android:id="@+id/main_button_favourites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Favourites"
+        android:backgroundTint="@color/black"
+        app:layout_constraintLeft_toRightOf="@id/main_button_popular"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="@id/main_button_search"/>
 
     <Button
         android:id="@+id/main_button_search"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/main_button_popular"
+        android:text="Search"
+        android:backgroundTint="@color/black"
+        app:layout_constraintLeft_toRightOf="@id/main_button_favourites"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
