--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.CryptocurrencyTracker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+    <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
+<!-- <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar"> -->
 
-    <style name="Theme.CryptocurrencyTracker" parent="Base.Theme.CryptocurrencyTracker" />
+    <item name="tabIndicatorColor">@color/tabSelectedIndicator</item>
+    <item name="tabTextColor">@color/tabUnselectedTextColor</item>
+    <item name="tabSelectedTextColor">@color/tabSelectedTextColor</item>
+    </style>
 </resources>
