--- a/app/src/main/res/layout/coin_view.xml
+++ b/app/src/main/res/layout/coin_view.xml
@@ -17,18 +17,18 @@
         android:text="1"
         app:layout_constraintRight_toLeftOf="@id/view_image_coin"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="20sp"
-        android:layout_marginHorizontal="15dp"
+        android:textSize="19sp"
+        android:layout_marginHorizontal="11dp"
         android:layout_marginVertical="25dp"/>
 
     <ImageView
         android:id="@+id/view_image_coin"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         app:layout_constraintLeft_toRightOf="@id/view_text_id"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginHorizontal="25dp"
+        android:layout_marginHorizontal="11dp"
         android:layout_marginVertical="25dp"/>
 
     <TextView
@@ -36,14 +36,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="19sp"
         android:textAlignment="center"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/view_image_coin"
         app:layout_constraintRight_toLeftOf="@id/view_text_price"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginHorizontal="25dp"
+        android:layout_marginHorizontal="11dp"
         android:layout_marginVertical="25dp"/>
 
     <TextView
@@ -51,22 +51,57 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="19sp"
         android:textAlignment="center"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/view_text_symbol"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginHorizontal="15dp"
+        android:layout_marginHorizontal="11dp"
         android:layout_marginVertical="25dp"/>
 
     <View
         android:layout_width="0dp"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <ImageView
+        android:id="@+id/display_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/display"
+        app:tint="@android:color/white"
+        android:contentDescription="Display"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/share_btn"/>
+
+    <ImageView
+        android:id="@+id/share_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/share"
+        app:tint="@android:color/white"
+        android:contentDescription="Share"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/favourite_btn"/>
+
+    <ImageView
+        android:id="@+id/favourite_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/favourite_unfilled"
+        app:tint="@android:color/white"
+        android:contentDescription="Favourite"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
