--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -9,26 +9,29 @@
 
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
+       android:layout_width="0dp"
+       android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-       tools:itemCount="8"
+       tools:itemCount="7"
        tools:listitem="@layout/coin_view"
-       app:layout_constraintTop_toBottomOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/main_screen_refresh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
 
    <Button
-       android:visibility="invisible"
+       android:visibility="visible"
        android:id="@+id/main_screen_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
-       android:text="@string/refresh"
+       android:backgroundTint="@color/black"
+       android:text="Refresh"
+       android:drawableEnd="@drawable/refresh"
+       android:drawableTint="@color/white"
+       android:drawablePadding="7dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
