--- a/app/src/main/res/layout/coin_view.xml
+++ b/app/src/main/res/layout/coin_view.xml
@@ -18,56 +18,43 @@
         app:layout_constraintRight_toLeftOf="@id/view_image_coin"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="19sp"
-        android:layout_marginHorizontal="11dp"
-        android:layout_marginVertical="25dp"/>
+        android:layout_marginVertical="35dp"/>
 
     <ImageView
         android:id="@+id/view_image_coin"
         android:layout_width="35dp"
         android:layout_height="35dp"
+        android:layout_marginVertical="35dp"
+        android:layout_marginLeft="17dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/view_text_id"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginHorizontal="11dp"
-        android:layout_marginVertical="25dp"/>
+        app:layout_constraintVertical_bias="0.585" />
 
     <TextView
         android:id="@+id/view_text_symbol"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="19sp"
-        android:textAlignment="center"
-        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/view_image_coin"
-        app:layout_constraintRight_toLeftOf="@id/view_text_price"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginHorizontal="11dp"
-        android:layout_marginVertical="25dp"/>
+        app:layout_constraintRight_toLeftOf="@id/view_text_price"
+        android:layout_marginVertical="35dp"/>
 
     <TextView
         android:id="@+id/view_text_price"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="19sp"
-        android:textAlignment="center"
-        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/view_text_symbol"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginHorizontal="11dp"
-        android:layout_marginVertical="25dp"/>
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@color/gray"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintRight_toLeftOf="@id/display_btn"
+        android:layout_marginVertical="35dp"/>
 
     <ImageView
         android:id="@+id/display_btn"
@@ -104,4 +91,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
