--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -21,10 +21,10 @@
        app:layout_constraintBottom_toBottomOf="parent"/>
 
    <Button
-       android:visibility="visible"
+       android:visibility="invisible"
        android:id="@+id/main_screen_refresh"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
+       android:layout_width="0dp"
+       android:layout_height="0dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="Refresh"
