--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,12 +9,12 @@
     <EditText
         android:id="@+id/searchInput"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="51dp"
         android:hint="Search by name or symbol"
         android:inputType="text"
+        android:textColor="@color/white"
         android:layout_marginStart="17dp"
         android:layout_marginTop="17dp"
-        android:layout_marginEnd="17dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/searchButton"
         app:layout_constraintTop_toTopOf="parent"/>
