--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,11 +8,13 @@
 
     <EditText
         android:id="@+id/searchInput"
+        android:textSize="17sp"
         android:layout_width="0dp"
         android:layout_height="51dp"
-        android:hint="Search by name or symbol"
+        android:hint="@string/search_hint"
         android:inputType="text"
         android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:layout_marginStart="17dp"
         android:layout_marginTop="17dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,9 +23,10 @@
 
     <Button
         android:id="@+id/searchButton"
+        android:textSize="17sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search"
+        android:text="@string/search"
         android:backgroundTint="@color/black"
         android:drawableEnd="@drawable/search"
         android:drawableTint="@color/white"
@@ -37,8 +40,6 @@
         android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="7"
