--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,28 +13,13 @@
         android:layout_height="51dp"
         android:hint="@string/search_hint"
         android:inputType="text"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="17dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/searchButton"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <Button
-        android:id="@+id/searchButton"
-        android:textSize="15sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/search"
-        android:backgroundTint="@color/black"
-        android:drawableEnd="@drawable/search"
-        android:drawableTint="@color/white"
-        android:drawablePadding="7dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="17dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
